--- a/pages/index.html
+++ b/pages/index.html
@@ -18,9 +18,9 @@
                 <h4>"Vístete para el éxito, ya sea en la cancha o en la vida. Encuentra tu estilo, supera tus límites."</h4>
             </div>
             <div class="botones">
-                <button class="boton">Sobre</button>
-                <button class="boton">Productos</button>
-                <button class="boton">Ubicacion</button>
+                <a href="#info"><button class="boton">Sobre</button></a>
+                <a href="#catalogo"><button class="boton">Productos</button></a>
+                <a href="#encuentro"><button class="boton">Ubicacion</button></a>
             </div>
         </div>
     </nav>
@@ -150,7 +150,7 @@
             </div>
         </div>
     </div>
-    <div class="informacion">
+    <div id="info" class="informacion">
         <div>
             <img class="imagen_informacion" src="/imagenes/imagenes_inicio/www-8445570025961-00.avif" alt="">
         </div>
@@ -182,8 +182,8 @@
         </div>
     </div>
     <div>
-        <div class="titulo_mapa">
-            <h3>Encuentranos en</h3>
+        <div id="encuentro" class="titulo_mapa">
+            <h3>ENCUENTRANOS EN</h3>
         </div>
         <div class="mapa">
             <div>
