--- a/pages/index.html
+++ b/pages/index.html
@@ -69,7 +69,7 @@
         </div>
     </main>
     <div id="catalogo" class="productos">
-        <div class="card" style="width: 18rem;">
+        <div class="card">
             <img src="/imagenes/Imagenes_ropa/BERMUDA-NEGRA-600x600.png" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5><b>Bermuda Deportiva</b></h5>
@@ -77,7 +77,7 @@
                 <p class="card-text">Disponibles en 1 color</p>
             </div>
         </div>
-        <div class="card" style="width: 18rem;">
+        <div class="card">
             <img src="/imagenes/Imagenes_zapatos/zapato_uno.webp" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5><b>Tenis Deportivos</b></h5>
@@ -85,7 +85,7 @@
                 <p class="card-text">Disponibles en varios colores</p>
             </div>
         </div>
-        <div class="card" style="width: 18rem;">
+        <div class="card">
             <img src="/imagenes/Imagenes_ropa/camiseta_uno.webp" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5><b>Camiseta Basica</b></h5>
@@ -93,7 +93,7 @@
                 <p class="card-text">Disponibles en varios colores</p>
             </div>
         </div>
-        <div class="card" style="width: 18rem;">
+        <div class="card">
             <img src="/imagenes/Imagenes_ropa/pantalon_deportivo.png" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5><b>Pantalon Deportivo</b></h5>
@@ -101,7 +101,7 @@
                 <p class="card-text">Disponibles en 1 color</p>
             </div>
         </div>
-        <div class="card" style="width: 18rem;">
+        <div class="card">
             <img src="/imagenes/Imagenes_zapatos/zapato_dos.webp" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5><b>Tenis Deportivos</b></h5>
@@ -109,7 +109,7 @@
                 <p class="card-text">Disponibles en 1 color</p>
             </div>
         </div>
-        <div class="card" style="width: 18rem;">
+        <div class="card">
             <img src="/imagenes/Imagenes_ropa/blusa_naranja.webp" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5><b>Blusa Naranja</b></h5>
@@ -117,7 +117,7 @@
                 <p class="card-text">Disponibles en varios colores</p>
             </div>
         </div>
-        <div class="card" style="width: 18rem;">
+        <div class="card">
             <img src="/imagenes/Imagenes_ropa/chamarramezclilla.webp" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5><b>Chaqueta Jean</b></h5>
@@ -125,7 +125,7 @@
                 <p class="card-text">Disponibles en 1 color</p>
             </div>
         </div>
-        <div class="card" style="width: 18rem;">
+        <div class="card">
             <img src="/imagenes/Imagenes_ropa/camiseta_doswebp.webp" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5><b>Camiseta Deportiva</b></h5>
@@ -133,7 +133,7 @@
                 <p class="card-text">Disponibles en 1 color</p>
             </div>
         </div>
-        <div class="card" style="width: 18rem;">
+        <div class="card">
             <img src="/imagenes/Imagenes_zapatos/zapato_tres.png" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5><b>Tenis Deportivos</b></h5>
@@ -141,7 +141,7 @@
                 <p class="card-text">Disponibles en varios colores</p>
             </div>
         </div>
-        <div class="card" style="width: 18rem;">
+        <div class="card">
             <img src="/imagenes/Imagenes_ropa/pantalon_deportivo2.png" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5><b>Pantalon Deportivo</b></h5>
@@ -187,13 +187,7 @@
         </div>
         <div class="mapa">
             <div>
-                <img class="imagenes_mapa" src="/imagenes/imagenes_inicio/Modelos-chaquetas.png" alt="">
-            </div>
-            <div>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3989.7932649421314!2d-78.50187382503542!3d-0.20305419979494554!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x91d59a3fbb8e0733%3A0xf6488c5a9d564f5a!2sCentro%20Comercial%20Artesanal%20Quitus!5e0!3m2!1ses-419!2sec!4v1725333223513!5m2!1ses-419!2sec" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </div>
-            <div>
-                <img class="imagenes_mapa" src="/imagenes/Logos/logo_pagina.webp" alt="">
+                <iframe class="mapa_google" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3989.7932649421314!2d-78.50187382503542!3d-0.20305419979494554!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x91d59a3fbb8e0733%3A0xf6488c5a9d564f5a!2sCentro%20Comercial%20Artesanal%20Quitus!5e0!3m2!1ses-419!2sec!4v1725333223513!5m2!1ses-419!2sec"></iframe>
             </div>
         </div>
     </div>
